test_regress/t/t_class_param_bad.out
%Error: t/t_class_param_bad.v:12:11: Parameter pin not found: 'PARAMBAD'
                                   : ... Suggested alternative: 'PARAMB'
   12 |    Cls #(.PARAMBAD(1)) c;   
      |           ^~~~~~~~
%Error: t/t_class_param_bad.v:13:14: Parameter pin not found: '__paramNumber2'
   13 |    Cls #(13, 1) cd;   
      |              ^
%Error: Exiting due to
